# routes/index.js
@@ -7,20 +7,12 @@ const studentRoutes = require('./student');
 const courseRoutes = require('./course'); 
 const passport = require('passport');
 
-routes.get('/login', passport.authenticate('google', { scope: ['profile', 'email'] }), (req, res) => {});
-
-routes.get("/logout", function(req, res, next) {
-    req.logout(function(err) {
-      if (err) { return next(err); }
-        res.redirect('/');
-    });
-});
-
 // Use routes
 routes.use('/student', studentRoutes);  // all student routes under /students
 routes.use('/course', courseRoutes);    // all course routes under /courses
 
 // Error handling middleware
+routes.use('/auth', require('./auth'));
 
 
 // Swagger UI
