# utilities/authSchema.js
@@ -1,0 +1,15 @@
+const Joi = require('joi');
+
+const registerSchema = Joi.object({
+  firstName: Joi.string().min(2).max(50).required(),
+  lastName: Joi.string().min(2).max(50).required(),
+  email: Joi.string().email().required(),
+  password: Joi.string().min(6).required()
+});
+
+const loginSchema = Joi.object({
+  email: Joi.string().email().required(),
+  password: Joi.string().min(6).required()
+});
+
+module.exports = { registerSchema, loginSchema };
